GPC/tests/examples/fail/wrongPointers2.gpc


int GPRM::Test::wrongPointers2(int **b) {
    int **a = b;
    int *c = b;
}

